--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body{
-    background-color: silver;
-    color: gray;
+    background-color: rgb(60, 49, 124);
+    color: green;
 }
 form{
     width: 450px;
-    border: 4px solid magenta;
-    background-color: black;
+    border: 4px solid orangered;
+    background-color: gray;
     padding: 30px;
   }
